tests/ui/not-trivial.stderr
error[E0277]: the trait bound `String: ref_cast::trivial::Trivial` is not satisfied
 --> $DIR/not-trivial.rs:8:10
  |
8 |     two: String,
  |          ^^^^^^ the trait `ref_cast::trivial::Trivial` is not implemented for `String`
  |
 ::: $WORKSPACE/src/trivial.rs
  |
  | pub fn assert_trivial<T: Trivial>() {}
  |                          ------- required by this bound in `assert_trivial`
